@@ -465,10 +465,10 @@ public class GroupByOperator extends Operator<GroupByDesc> {
     case DOUBLE:
       return javaSizePrimitiveType;
     case STRING:
-      keyPositionsSize.add(new Integer(pos));
+      keyPositionsSize.add(Integer.valueOf(pos));
       return javaObjectOverHead;
     case BINARY:
-      keyPositionsSize.add(new Integer(pos));
+      keyPositionsSize.add(Integer.valueOf(pos));
       return javaObjectOverHead;
     case TIMESTAMP:
     case TIMESTAMPLOCALTZ:
